# auto-FOX

./: .coveragerc  .environment.yaml  .gitattributes  .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG.rst  CITATION.cff  CONTRIBUTING.rst  MANIFEST.in  NOTICE  Ottoman  README.md  README.rst  codecov.yaml  codecov.yml  conftest.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_requirement_min_version.txt
.github/workflows/: pypi.yml  pythonpackage.yml
FOX/: README.rst  __init__.py  __version__.py  entry_points.py  frozen_mapping.py  logger.py  schema_utils.py  test_utils.py  testing_utils.py  type_alias.py  type_alias.pyi  type_hints.py  typed_mapping.py  typed_mapping.pyi  utils.py  yaml.py
FOX/armc/: __init__.py  armc.py  armc_pt.py  armc_to_yaml.py  csv_utils.py  df_to_dict.py  err_funcs.py  guess.py  mc_post_process.py  monte_carlo.py  monte_carlo_test.py  package_manager.py  param_mapping.py  phi_updater.py  plotting.py  run_armc.py  sanitization.py  schemas.py  workflow_manager.py
FOX/armc_functions/: README.rst  __init__.py  analyses.py  csv.py  csv_utils.py  df_to_dict.py  guess.py  mc_post_process.py  monte_carlo_test.py  param_guess.py  plotting.py  sanitization.py  schemas.py
FOX/classes/: README.rst  __init__.py  armc.py  armc_to_yaml.py  frozen_settings.py  molecule_utils.py  monte_carlo.py  multi_mol.py  multi_mol_magic.py  multi_mol_repr.py  phi_updater.py  psf.py  psf_dict.py  to_hdf5.py  workflow_manager.py
FOX/data/: LJ_potential.yaml  README.rst  __init__.py  armc.yaml  armc_template.yaml  armc_verbose.yaml  atomic_charges.yaml  formate.str  md_cp2k.yaml  md_cp2k_template.yaml  param.yaml  scattering.yaml  shannon_radii.csv  uff.csv
FOX/examples/: README.rst  __init__.py  armc copy.yaml  armc.yaml  armcpt.yaml  cp2k_armc.py  cp2k_md.py  cp2k_md_v2.py  example_xyz.py  input.py  test_armc.py  test_shell.py
FOX/examples/_private/: _test_armc.py  armc_ivan.yaml  armc_new.yaml  armc_ref.yaml  cp2k_md_v2.py  test_armc.py
FOX/examples/private/: armc.yaml  armc_ivan.yaml  armc_ivan_bulk.yaml  armc_new.yaml  cp2k_md_v2.py  test_armc.py
FOX/ff/: __init__.py  bonded_calculate.py  degree_of_separation.py  lj_calculate.py  lj_dataframe.py  lj_intra_calculate.py  lj_param.py  lj_uff.py  parse_wildcards.py  shannon_radii.py
FOX/functions/: README.rst  __init__.py  adf.py  armc_analyses.py  armc_sanitization.py  bonded_calculate.py  charge_parser.py  charge_utils.py  charmm_single_points.py  cp2k_utils.py  debye.py  hd5f_utils.py  hdf5_utils.py  lennard_jones.py  lj_calculate.py  lj_param.py  lj_uff.py  md.py  misc.py  molecule_utils.py  multi_mol.py  multi_mol_magic.py  periodic.py  radial_distribution.py  randomize_param.py  rdf.py  read_prm.py  read_xyz.py  schemas.py  sorting.py  utils.py
FOX/functions/WiP/: md.py  misc.py  rms.py
FOX/io/: README.rst  __init__.py  _base.py  _read_rtf.py  _read_top.py  _top_concat.py  cp2k.py  cp2k_to_prm.py  file_container.py  hdf5_utils.py  read_kf.py  read_pdb.py  read_prm.py  read_psf.py  read_temp.py  read_volume.py  read_xyz.py
FOX/properties/: __init__.py  annotations.pyi  base.py  base.pyi  bulk_modulus.py  bulk_modulus.pyi  pressure.py  pressure.pyi
FOX/recipes/: __init__.py  _xyz_to_gro.py  histogram.py  ligands.py  param.py  psf.py  rdf.py  similarity.py  similarity.pyi  time_resolution.py  top.py
docs/: 0_documentation.rst  10_properties.rst  11_rtf.rst  12_top.rst  1_rdf.rst  2_rmsd.rst  3_multimolecule.rst  4_monte_carlo.rst  4_monte_carlo_args.rst  5_xyz_reader.rst  6_estimate_lj.rst  7_recipes.rst  8_psf.rst  9_prm.rst  Makefile  MultiMolecule.rst  RMSD.rst  _0_file_container.rst  _1_read_prm.rst  _2_cp2k_to_prm.rst  _3_typed_mapping.rst  _4_param_mapping.rst  _5_package_manager.rst  _6_monte_carlo.rst  _7_phi_updater.rst  _8_err_func.rst  conf.py  documentation.rst  index.rst  make.bat  rdf.rst  xyz_reader.rst
docs/_static/: default.css
docs/_templates/: layout.html
test/: README.rst  test_charge_utils.py  test_example.py  test_functions.py  test_hdf5_utils.py  test_lint.py  test_molecule_utils.py  test_multi_mol.py  test_read_prm.py  test_read_psf.py  test_utils.py  tests.py
test/test_files/: adf.npy  as_psf.psf  average_velocity.npy  fix_bond_orders.npy  generate_psf_block.npy  guess_bonds.npy  idx_series.yaml  impropers.npy  ligand.str  md.rkf  pdb_atoms.csv  pdb_bonds.npy  psf_atoms.csv  rdf.npy  separate_mod.npy  shell_rdf.npy  test_param2.prm  time_averaged_velocity.npy  update_atom_type.npy
test/test_files/psf/: acceptors.npy  (+4 more)
tests/: README.rst  _test_charge_utils.py  test_Auto-FOX.py  test_armc.py  test_bonded_calculate.py  test_charge_parser.py  test_charge_utils.py  test_cp2k_io.py  test_degree_of_separation.py  test_example.py  test_frozen_settings.py  test_guess.py  test_hdf5_utils.py  test_ligands_recipe.py  test_lint.py  test_lj_calculate.py  test_lj_uff.py  test_molecule_utils.py  test_monte_carlo.py  test_multi_mol.py  test_param_mapping.py  test_param_recipes.py  test_periodic.py  test_phi_updater.py  test_prm.py  test_properties.py  test_psf.py  test_psf_recipe.py  test_read_kf.py  test_read_pdb.py  test_read_prm.py  test_read_psf.py  test_recipes.py  test_rtf.py  test_similarity.py  test_sorting.py  test_sphinx.py  test_td_recipe.py  test_top.py  test_top_recipe.py  (+3 more)
tests/test_files/: Butoxide.prm  adf.npy  adf_3d_inf.npy  adf_atom_pairs.npy  adf_periodic_2d.npy  adf_periodic_2d_inf.npy  adf_periodic_3d.npy  adf_periodic_3d_inf.npy  adf_weighted.npy  angles.npy  angles2.npy  armc.yaml  armc_cp2k.yaml  armc_md_settings.yaml  armc_param.csv  armc_ref.yaml  armc_test.hdf5  armcpt_cp2k.yaml  armcpt_ref.yaml  average_velocity.npy  bonds.npy  bulk_modulus.npy  degree_of_separation.npy  delete_atoms.npy  delete_atoms_alias.npy  delete_atoms_alias2.npy  generate_psf.psf  generate_psf_bonds.npy  generate_psf_bonds2.npy  generate_psf_formate.psf  get_angles.npy  get_bonded.angles.npy  get_bonded.bonds.npy  get_bonded.impropers.npy  get_bonded.urey_bradley.npy  get_bonds.npy  get_bonds_per_atom.npy  get_dihedrals.npy  get_impropers.npy  get_move_range.1.npy  (+67 more)
(+922 files in other folders)
