[metadata]
description-file = README.rst

[aliases]
# Define `python setup.py test`
test = pytest

[coverage:run]
branch = True
source = FOX
omit = FOX/examples

[flake8]
ignore =
    E226
    E704
    W504
    FOX/examples/ ALL
max-line-length = 100

[tool:pytest]
testpaths = FOX tests
addopts = --tb=short --cov=FOX --cov-report xml --cov-report term --cov-report html
markers = slow: A marker for slow tests requiring external quantum-chemical packages.
filterwarnings = ignore::pandas.errors.PerformanceWarning

# Define `python setup.py build_sphinx`
[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1
builder = html

[pydocstyle]
convention = numpy
add-ignore = D401, D103, D102, D105
ignore-decorators = set_docstring
